--- a/src/app/profiles/profiles.component.scss
+++ b/src/app/profiles/profiles.component.scss
@@ -95,6 +95,7 @@
       .two-cards {
         display: flex;
         gap: 1.5rem;
+        flex-wrap: wrap;
       }
 
       .card {
@@ -104,7 +105,7 @@
         border: 1px var(--dark-border) solid;
         border-radius: 0.5rem;
         padding: 1.5rem;
-        flex: 1;
+        flex: 1 1 auto;
 
         .chip-title-blue {
           @include chip(--dark-blue);
@@ -119,8 +120,8 @@
     .images {
       @extend .paragraph-gap-0;
 
-      gap: 5rem;
-      padding-top: 3.5rem;
+      gap: 2.5rem;
+      padding-top: 1.5rem;
       width: 100%;
     }
   }
@@ -133,11 +134,13 @@
 
     .title {
       text-align: center;
+      line-height: 170%;
     }
 
     .cards {
       display: flex;
       gap: 2.5rem;
+      width: 100%;
       flex-wrap: wrap;
 
       .card {
@@ -152,7 +155,7 @@
         .card-header {
           display: flex;
           gap: 0.5rem;
-          padding: 0.25rem 0.25rem;
+          padding: 0.25rem 0 0.25rem 0.5rem;
           border-radius: 0.25rem;
           background-color: var(--dark-border);
 
@@ -214,18 +217,17 @@
   .clips {
     @extend .section;
 
-    // display: grid;
+    display: grid;
     grid-column: span 3;
     padding: 5rem 0;
-    gap: 10rem;
     align-items: center;
     background-color: var(--dark-background-second);
-    // grid-template-columns: 1fr auto 1fr;
-    // grid-row-gap: 10rem;
+    grid-template-columns: 1fr auto 1fr;
+    grid-row-gap: 10rem;
 
     .clip {
-      // grid-column: 2;
-      // width: auto;
+      grid-column: 2;
+      width: auto;
       display: flex;
       gap: 5rem;
 
@@ -233,14 +235,25 @@
         @extend .paragraph-gap-2;
 
         align-self: center;
+        width: 100%;
+
+        .sub-title {
+          font-size: 1.125rem;
+          font-weight: 500;
+        }
+
+        .content {
+          font-size: 1.125rem;
+        }
       }
 
       .colored-text {
         color: var(--dark-blue);
       }
 
-      img {
-        width: 100%;
+      video {
+        width: 50rem;
+        border-radius: 0.5rem;
       }
     }
   }
@@ -253,6 +266,12 @@
       gap: 1.5rem;
       flex-wrap: wrap;
 
+      .two-cards {
+        @extend .paragraph-gap-3;
+
+        flex-wrap: wrap;
+      }
+
       .card {
         @extend .paragraph-gap-2;
 
@@ -261,7 +280,6 @@
         border-radius: 0.5rem;
         padding: 1.5rem;
         flex: 1 1 auto;
-        width: min-content;
 
         .chip-title-blue {
           @include chip(--dark-blue);
@@ -284,10 +302,6 @@
 
     gap: 1.5rem;
     padding-bottom: 8.25rem;
-
-    .text-bold {
-      font-weight: 600;
-    }
 
     .images {
       display: flex;
@@ -349,11 +363,26 @@
 
     .clips {
       gap: 6rem;
-      padding: 5rem 1.5rem;
+      padding: 3rem 1.5rem;
+      column-gap: 0;
 
       .clip {
         gap: 1.5rem;
         flex-wrap: wrap;
+
+        .step {
+          .sub-title {
+            font-size: 1rem;
+          }
+
+          .content {
+            font-size: 1rem;
+          }
+        }
+
+        video {
+          width: 100%;
+        }
       }
     }
 
