--- a/src/app/profiles/profiles.component.html
+++ b/src/app/profiles/profiles.component.html
@@ -30,7 +30,6 @@
         </span>
       </div>
     </div>
-
     <div class="research">
       <span class="title">Research</span>
       <span>
@@ -122,7 +121,7 @@
       </div>
     </div>
 
-    <div class="first-filler hide-on-mobile hide-on-mobile"></div>
+    <div class="first-filler hide-on-mobile"></div>
     <div class="concept">
       <span class="title">Creating the initial concept</span>
       <div class="cards">
