--- a/src/app/threats/threats.component.html
+++ b/src/app/threats/threats.component.html
@@ -136,7 +136,9 @@
                 <span class="title">Defence Officer</span>
                 <img src="../../assets/threats/lieutenant.svg" />
               </span>
-              <span>They manage the entire defence process.</span>
+              <span class="content"
+                >They manage the entire defence process.</span
+              >
             </div>
             <span class="paragraph-gap-1">
               <span class="chip-title-blue">needs</span>
