--- a/src/app/profiles/profiles.component.scss
+++ b/src/app/profiles/profiles.component.scss
@@ -219,7 +219,7 @@
 
     display: grid;
     grid-column: span 3;
-    padding: 5rem 0;
+    padding: 5rem 4rem;
     align-items: center;
     background-color: var(--dark-background-second);
     grid-template-columns: 1fr auto 1fr;
@@ -355,6 +355,7 @@
 
     .flow {
       width: 100%;
+      padding: 0;
 
       img {
         padding: 0 1.5rem;
@@ -396,7 +397,7 @@
 
     .visual-language {
       width: 100%;
-      padding-bottom: 4rem;
+      padding: 0 0 4rem 0;
 
       > div {
         padding: 0 1.5rem;
