--- a/src/app/header/header.component.scss
+++ b/src/app/header/header.component.scss
@@ -52,7 +52,6 @@
       flex-direction: column;
       align-items: center;
       gap: 1rem;
-      padding: 3rem 0;
 
       .close {
         position: absolute;
@@ -65,13 +64,13 @@
         display: flex;
         flex-direction: column;
         gap: 1rem;
-        align-items: center;
         position: absolute;
         top: 10%;
 
         .link {
           font-size: 1.125rem;
           font-weight: 500;
+          padding: 1.5rem;
         }
 
         .selected-link {
