--- a/src/app/header/header.component.scss
+++ b/src/app/header/header.component.scss
@@ -65,12 +65,12 @@
         flex-direction: column;
         gap: 1rem;
         position: absolute;
-        top: 10%;
+        top: 30%;
 
         .link {
           font-size: 1.125rem;
           font-weight: 500;
-          padding: 1.5rem;
+          padding: 1.5rem 1.5rem 0 1.5rem;
         }
 
         .selected-link {
