--- a/src/app/pharm-yarok/pharm-yarok.component.scss
+++ b/src/app/pharm-yarok/pharm-yarok.component.scss
@@ -161,11 +161,12 @@
           .content {
             position: absolute;
             top: 0;
-            margin: 0.5rem 0 0.8rem 0.5rem;
+            margin: 0.5rem 0 1rem 0.5rem;
             overflow-y: auto;
             border-radius: 1.25rem;
             height: -webkit-fill-available;
-            width: 14.5rem;
+            width: -webkit-fill-available;
+            max-width: 14.5rem;
 
             img {
               width: -webkit-fill-available;
