--- a/src/app/pharm-yarok/pharm-yarok.component.scss
+++ b/src/app/pharm-yarok/pharm-yarok.component.scss
@@ -395,9 +395,8 @@
 
           .scroll-image {
             .content {
-              margin: 0.3rem 0 0.8rem 0.3rem;
+              margin: 0.3rem 0.3rem 0.8rem 0.3rem;
               border-radius: 0.35rem;
-              width: 7.5rem;
             }
           }
         }
