Update sentence in home

--- a/src/app/home/home.component.html
+++ b/src/app/home/home.component.html
@@ -9,7 +9,8 @@
 
           <span class="sub-title">Product Designer</span>
           <span class="sentence"
-            >I design systems that make a difference for the Israeli Navy</span
+            >I design complex systems that make a difference for the Israeli
+            Navy</span
           >
         </div>
       </div>
