Update home sentence

--- a/src/app/home/home.component.html
+++ b/src/app/home/home.component.html
@@ -7,10 +7,9 @@
         <div class="intro">
           <span class="header">Hi, I'm Hadas</span>
 
-          <span class="sub-title">Product Designer</span>
           <span class="sentence"
-            >I design complex systems that make a difference for the Israeli
-            Navy</span
+            >A Product Designer on a mission to make
+            <br class="hide-on-mobile" />complex systems simple</span
           >
         </div>
       </div>
