Add scroll animation

--- a/src/app/home/home.component.html
+++ b/src/app/home/home.component.html
@@ -19,7 +19,7 @@
         <img class="pharm-yarok" (click)="goto('pharm-yarok')" />
       </div>
       <div id="about" class="about">
-        <span class="card">
+        <div class="card">
           <span class="title">About me</span>
           <span class="content content-padding">
             <span>
@@ -51,8 +51,8 @@
               experiences.</span
             >
           </span>
-        </span>
-        <span class="card">
+        </div>
+        <div class="card">
           <span class="title"
             >Fun Facts <img class="stars" src="../../assets/icons/stars.svg"
           /></span>
@@ -74,7 +74,7 @@
               >Currently learning: <span class="text-bold">Spanish.</span></span
             >
           </span>
-        </span>
+        </div>
       </div>
     </div>
     <div></div>
