--- a/src/app/home/home.component.scss
+++ b/src/app/home/home.component.scss
@@ -113,11 +113,11 @@
 
   .about {
     display: flex;
-    width: 100%;
+    width: -webkit-fill-available;
     background-image: url("../../assets/background.svg");
     background-position: center;
     gap: 3.5rem;
-    padding: 10.125rem 0;
+    padding: 10.125rem 5rem;
     justify-content: center;
     flex-wrap: wrap;
 
@@ -129,7 +129,7 @@
       border-radius: 0.5rem;
       padding: 3.5rem;
       background: var(--card-background);
-      flex: 1 1 auto;
+      flex: 1;
 
       .title {
         display: flex;
@@ -241,6 +241,7 @@
         gap: 1rem;
         max-width: none;
         border-width: 1px;
+        flex: 1 1 auto;
 
         .title {
           font-size: 1.25rem;
