Add protected dialog

--- a/src/app/home/home.component.html
+++ b/src/app/home/home.component.html
@@ -14,8 +14,8 @@
         </div>
       </div>
       <div class="projects">
-        <img class="profiles" (click)="goto('profiles')" />
-        <img class="threats" (click)="goto('threats')" />
+        <img class="profiles" (click)="goto('profiles', true)" />
+        <img class="threats" (click)="goto('threats', true)" />
         <img class="pharm-yarok" (click)="goto('pharm-yarok')" />
       </div>
       <div id="about" class="about">
