Fix height in mobile

--- a/src/app/password-dialog/password-dialog.component.scss
+++ b/src/app/password-dialog/password-dialog.component.scss
@@ -81,6 +81,18 @@
 }
 
 @media (max-width: 600px) {
+  .dialog {
+    .form {
+      .password {
+        height: 2.75rem;
+      }
+
+      .submit {
+        height: 3rem;
+      }
+    }
+  }
+
   ::ng-deep.cdk-overlay-pane {
     position: absolute !important;
     top: 2rem !important;
