--- a/src/app/home/home.component.html
+++ b/src/app/home/home.component.html
@@ -8,8 +8,11 @@
           <span class="header">Hi, I'm Hadas</span>
 
           <span class="sentence"
-            >A Product Designer on a mission to make
-            <br class="hide-on-mobile" />complex systems simple</span
+            >Currently a product designer<br class="show-on-mobile" />
+            for the Israeli Navy, <br />Crafting user-centered solutions<br
+              class="show-on-mobile"
+            />
+            to simplify complex systems.</span
           >
         </div>
       </div>
