Update threat image

--- a/src/app/home/home.component.html
+++ b/src/app/home/home.component.html
@@ -17,7 +17,7 @@
         </div>
       </div>
       <div class="projects">
-        <img class="profiles" (click)="goto('profiles', true)" />
+        <img class="profiles" (click)="goto('profiles')" />
         <img class="threats" (click)="goto('threats', true)" />
         <img class="pharm-yarok" (click)="goto('pharm-yarok')" />
       </div>
